--- a/templates/map.html
+++ b/templates/map.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuiteMap - Поиск тихих мест</title>
+    <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
     <script src="https://api-maps.yandex.ru/2.1/?apikey={{ yandex_maps_api_key }}&lang=ru_RU" type="text/javascript"></script>
     <style>
         * {
